Fixed layout issues

--- a/src/app/bodyblock/bodyblock.component.scss
+++ b/src/app/bodyblock/bodyblock.component.scss
@@ -1,6 +1,8 @@
 @import '../../css.penguin/view_vars';
-
-$font-stack: 'Open Sans', Helvetica, Arial, sans-serif;
+$font-stack: 'Open Sans',
+Helvetica,
+Arial,
+sans-serif;
 //This is for when the poetry is not being shown
 body {
   font-family: $font-stack;
@@ -12,33 +14,33 @@ body {
     span.part {
       margin-left: 6pt;
     }
-
     span.answer {
       text-indent: 1em;
     }
   }
-
   #bodyBlock.hidden-paragraph div.hidden-paragraph {
     span.line {
       padding-right: 6pt;
     }
-
     span.break {
       margin-bottom: 6pt;
     }
-  }
-  //This is styling for when poetry is being shown
+  } //This is styling for when poetry is being shown
   .body-block.show-poetry {
     span.line {
       display: block;
     }
-
     & .break {
       display: block;
       margin-bottom: 6pt;
     }
   }
-
+  #bodyBlock {
+    span.verse-number {
+      vertical-align: super;
+      font-size: 8pt;
+    }
+  }
   #bodyBlock.hidden-paragraph {
     span {
       &.part,
@@ -47,72 +49,61 @@ body {
         font-family: $font-stack;
         display: block;
       }
-
       &.verse {
         font-family: $font-stack;
         text-align: left;
         margin: 0;
         margin-bottom: 6pt;
         display: block;
-
+        span.verse-number {
+          vertical-align: unset;
+          font-size: inherit;
+        }
         div.hidden-paragraph & {
-          display: inline;
-
-          span.verse-number {
-            vertical-align: super;
-            font-size: 8pt;
-          }
+          display: inline; // span.verse-number {
+          //   vertical-align: super;
+          //   font-size: 8pt;
+          // }
         }
       }
     }
   }
-
   span.deletion {
     font-style: italic;
   }
-
   span.deletion::before {
     content: '[';
     font-style: normal;
   }
-
   span.deletion::after {
     content: ']';
     font-style: normal;
   }
-
   span.insertion {
     font-weight: bold;
   }
-
   span.id-label {
     font-style: italic;
   }
   span.small-caps {
     font-variant: small-caps;
   }
-
   span.uppercase {
     text-transform: uppercase;
   }
-
   span.verse-number {
     color: DimGray;
     font-weight: bold;
   }
-
   span.clarity-word {
     font-style: italic;
   }
-
   span.key-letter {
     display: none;
   }
-
   span.key-word {
     font-style: italic;
   }
-
   sup.marker {
     font-style: italic;
     font-size: 8pt;
