--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,7 @@
   height: 24px;
   margin-top: 6px;
   margin-right: 10px;
+  text-align: center;
 }
 
 #bookName {
